--- a/src/GUI/LoginScreen.fxml
+++ b/src/GUI/LoginScreen.fxml
@@ -18,7 +18,7 @@
       <Pane prefHeight="200.0" prefWidth="200.0">
          <children>
             <Button fx:id="guestButton" layoutX="58.0" layoutY="129.0" mnemonicParsing="false" text="Play as guest" />
-            <Button fx:id "loginButton" layoutX="74.0" layoutY="62.0" mnemonicParsing="false" text="Log in" />
+            <Button fx:id="loginButton" layoutX="74.0" layoutY="62.0" mnemonicParsing="false" text="Log in" />
          </children>
       </Pane>
    </children>
