--- a/src/GUI/GameBoard.fxml
+++ b/src/GUI/GameBoard.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.shape.Rectangle?>
 
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.shape.Circle?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="806.0"
       prefWidth="600.0"
@@ -174,11 +175,24 @@
                            stroke="BLACK" strokeType="INSIDE" width="40.0"/>
             </children>
         </Pane>
-        <Button fx:id="rollDiceButton" layoutX="498.0" layoutY="655.0" mnemonicParsing="false" onAction="#rollDice"/>
-        <Button fx:id="playButton" layoutX="40" layoutY="655.0" mnemonicParsing="false" onAction="#play" text="Play"/>
-        <Text fx:id="rollResult" layoutX="498.0" layoutY="800.0" text="Label"/>
-        <Text fx:id="playerTurn" layoutX="80" layoutY="800.0"/>
-        <Text fx:id="warning" layoutX="40" layoutY="750.0"/>
-        <Circle fx:id="turnCircle" layoutX="40" layoutY="780.0" radius="20.0"/>
+        <Button fx:id="rollDiceButton" layoutX="500.0" layoutY="675.0" mnemonicParsing="false" onAction="#rollDice"/>
+        <Button fx:id="endTurnButton" layoutX="400" layoutY="675.0" mnemonicParsing="false" onAction="#endTurn"/>
+        <Button fx:id="playButton" layoutX="300" layoutY="675.0" mnemonicParsing="false" onAction="#play" />
+        <Text fx:id="rollResult" layoutX="490.0" layoutY="800.0">
+            <font>
+                <Font name="Calibri Bold" size="24.0"/>
+            </font>
+        </Text>
+        <Text fx:id="playerTurn" layoutX="80" layoutY="720.0">
+            <font>
+                <Font name="Calibri Bold" size="18.0"/>
+            </font>
+        </Text>
+        <Text fx:id="warning" layoutX="40" layoutY="100.0">
+            <font>
+                <Font name="Calibri Bold" size="24.0"/>
+            </font>
+        </Text>
+        <Circle fx:id="turnCircle" layoutX="40" layoutY="720.0" radius="25.0" fill="white"/>
     </children>
 </Pane>
