--- a/src/GUI/LoginScreen.fxml
+++ b/src/GUI/LoginScreen.fxml
@@ -8,39 +8,35 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="256.0" prefWidth="219.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LoginScreenController">
-   <children>
-      <GridPane>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="256.0"
+      prefWidth="219.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="GUI.LoginScreenController">
+    <GridPane>
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         </rowConstraints>
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-         </children>
-      </GridPane>
-      <GridPane layoutY="128.0" prefHeight="126.0" prefWidth="219.0">
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username"/>
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password" GridPane.rowIndex="1"/>
+        <TextField GridPane.columnIndex="1"/>
+        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+    </GridPane>
+    <GridPane layoutY="128.0" prefHeight="126.0" prefWidth="219.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         </rowConstraints>
-         <children>
-            <Button mnemonicParsing="false" text="Login" />
-            <Button mnemonicParsing="false" text="Register" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" onAction="#toGame" text="Play as guest" GridPane.rowIndex="2" />
-         </children>
-      </GridPane>
-   </children>
+        <Button mnemonicParsing="false" text="Login"/>
+        <Button mnemonicParsing="false" text="Register" GridPane.rowIndex="1"/>
+        <Button mnemonicParsing="false" onAction="#toPlayerScreen" text="Play as guest" GridPane.rowIndex="2"/>
+    </GridPane>
 </Pane>
 
